--- a/src/app/pages/user/user-profile/user-profile.component.html
+++ b/src/app/pages/user/user-profile/user-profile.component.html
@@ -9,26 +9,37 @@
           <p>Moahmed Ahemed</p>
         </div> -->
         <div class="row">
+          <div class="col-12">
+            <div class="alert alert-danger" role="alert"
+                *ngIf="showInfoErrors && profileForm.invalid">
+                <span *ngIf="profileForm.get('first_name').invalid"> {{"*Please enter  first name" | translate}}</span><br>
+                <span *ngIf="profileForm.get('last_name').invalid"> {{"*Please enter last name" | translate}}</span><br>
+              
+            </div>
+        </div>
+          <form [formGroup]="profileForm">
           <div class="col-md-8">
-<div class="row">
-  <div class="col-lg-12">
-    <div class="ui search focus mt-20">
-      <div class="ui left icon input swdh11 swdh19">
-        <label>{{"First Name"|translate}}</label>
-        <input class="prompt srch_explore" type="text" value="Ahmed" required="" maxlength="64" placeholder="First Name">
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-12">
-    <div class="ui search focus mt-20">
-      <div class="ui left icon input swdh11 swdh19">
-        <label>{{"Last Name"|translate}}</label>
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="ui search focus mt-20">
+                  <div class="ui left icon input swdh11 swdh19">
+                    <label>{{"First Name"|translate}}</label>
+                    <input class="prompt srch_explore" type="text" required maxlength="64"
+                      placeholder="{{'First Name' | translate}}" formControlName='first_name'>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-12">
+                <div class="ui search focus mt-20">
+                  <div class="ui left icon input swdh11 swdh19">
+                    <label>{{"Last Name"|translate}}</label>
 
-        <input class="prompt srch_explore" type="text" value="Mohamed" required="" maxlength="64" placeholder="Last Name">
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-12">
+                    <input class="prompt srch_explore" type="text" required maxlength="64"
+                      placeholder="{{'Last Name' | translate}}" formControlName='last_name'>
+                  </div>
+                </div>
+              </div>
+              <!-- <div class="col-lg-12">
     <div class="ui search focus mt-20">
       <div class="ui left icon input swdh11 swdh19">
         <label>{{"Email"|translate}}</label>
@@ -64,12 +75,12 @@
       </div>
     </div>
   </div>
-</div>
-<button class="save_btn" type="submit">Save Changes</button>
+</div> -->
+              <button class="save_btn" type="submit" (click)="onSaveClick()">{{"Save Changes" | translate}}</button>
+            </div>
           </div>
+        </form>
         </div>
       </div>
     </div>
   </div>
-</div>
-
