--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,3 +64,5 @@ h4 {
     cursor: not-allowed !important;
     pointer-events: none !important;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
