--- a/src/app/pages/instructor/createQuiz/create-quiz/create-quiz.component.html
+++ b/src/app/pages/instructor/createQuiz/create-quiz/create-quiz.component.html
@@ -6,43 +6,41 @@
             <ng-template matStepLabel>{{'quiz information' | translate}}</ng-template>
 
             <select formControlName="course">
-                <option disabled selected value="">{{'Select course' | translate}}
-                </option>
-                <option value="3">course</option>
-                <option value="3">course</option>
+                <option disabled selected value="">{{"Select Course" | translate}}</option>
+                <option *ngFor="let course of instructorCourses" value="{{course.id}}">{{course.name}}</option>
+
             </select>
 
-            <input class="col-lg-3 col-md-6" type="text" placeholder="{{'title' | translate}}"
-                formControlName="title" maxlength="120">
-            <input class="col-lg-3 col-md-6" type="text" placeholder="{{'sort' | translate}}"
-                formControlName="sort">
-            <input class="col-lg-3 col-md-6" type="text" placeholder="{{'pass score %' | translate}}"
-            formControlName="passScore">
-            <input class="col-lg-3 col-md-6" type="text" placeholder="{{'time (minuets)' | translate}}"
-            formControlName="time">
+            <input class="col-lg-3 col-md-6" type="text" placeholder="{{'title' | translate}}" formControlName="title"
+                maxlength="120">
+            <input class="col-lg-3 col-md-6" type="number" placeholder="{{'sort' | translate}}" formControlName="sort">
+            <input class="col-lg-3 col-md-6" type="number" placeholder="{{'pass score %' | translate}}"
+                formControlName="passScore">
+            <input class="col-lg-3 col-md-6" type="number" placeholder="{{'time (minuets)' | translate}}"
+                formControlName="time">
             <textarea class="col-lg-12 col-md-12" name="" id="" cols="30" rows="10"
-                placeholder="{{'description' | translate}}"
-                formControlName="description"
-                ></textarea>
+                placeholder="{{'description' | translate}}" formControlName="description"></textarea>
 
 
 
             <div>
-                <button mat-button matStepperNext>Next</button>
+                <button mat-button matStepperNext [disabled]="quizInfoForm.invalid">Next</button>
             </div>
         </form>
     </mat-step>
 
     <!-- questions step -->
-    <mat-step  label="{{'questions' | translate}}">
+    <mat-step label="{{'questions' | translate}}">
 
-       <h1>{{'instructions' | translate}}</h1>
+        <h1>{{'instructions' | translate}}</h1>
 
         <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus ex consequuntur ut repellendus illum adipisci reprehenderit voluptates vero! Esse fugiat maiores magnam sunt voluptate labore, eveniet beatae repellendus! Culpa, porro.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus ex consequuntur ut repellendus illum
+            adipisci reprehenderit voluptates vero! Esse fugiat maiores magnam sunt voluptate labore, eveniet beatae
+            repellendus! Culpa, porro.
         </p>
 
-        <button (click)="openAddQuestionsModal()">{{'Start add questions' | translate}}</button>
+        <button (click)="openAddQuestionsModal()">{{'Create quiz and start add questions' | translate}}</button>
         <div>
             <button mat-button matStepperPrevious>{{"Back" | translate}}</button>
             <!-- <button mat-button matStepperNext>Next</button> -->
